Improved code formatting and added comments

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
-    <!-- icons -->
+    <!-- Get css icons from css.gg -->
     <link href="https://css.gg/css?=|moon|sun" rel="stylesheet">
 
-    <!-- dark mode toggle -->
+    <!-- CSS for dark mode toggle button -->
     <link href="dark-mode-toggle.css" rel="stylesheet">
 
-    <!-- dark reader -->
+    <!-- Dark Reader API via jsDelivr CDN -->
     <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.16/darkreader.min.js"></script>
 
 </head>
@@ -56,7 +56,9 @@
 		<p>info@yourdomain.com</p>
     </div>
     
+    <!-- Dark mode toggle button -->
     <div class="dark-mode-toggle">
+        <!-- icon from css.gg -->
         <i class="gg-moon"></i>
     </div>
 
@@ -748,7 +750,7 @@
 	<!-- Main JS -->
     <script src="js/app.min.js "></script>
     
-    <!-- toggle-->
+    <!-- JS for toggling dark mode -->
     <script src="dark-mode-toggle.js"></script>
 </body>
 </html>
